maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:50: error: type mismatch;
 found   : Unit
 required: plm.universe.Direction
     if (getIndication(x,y-1)==i-1)
     ^